# library-server

./: .gitignore  Cargo.toml  Dockerfile  build.rs
src/: api.rs  data_store.rs  main.rs  tests.rs
src/frontend/: index.html  install.sh  package-lock.json  package.json  vite.config.ts
src/frontend/src/: App.css  App.tsx
storage/: db.json
