[package]
name = "rocket-library"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
# Add support for custom structs as static variables
lazy_static = "1.4.0"
# Gatter all Error types together (alternative to write Box<dyn Error>)
anyhow =  "1.0.65"
# Easy construction of error types
thiserror = "1.0.37"

# A web server 0.2.2framework
[dependencies.rocket]
version = "0.5.0-rc.2"
features = ["json"]