[package]
name = "library-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
# Add support for custom structs as static variables
lazy_static = "1.4.0"
# Gatter all Error types together (alternative to write Box<dyn Error>)
anyhow =  "1.0.65"
# Easy construction of error types
# Serialization and deserialization of data structures
serde = "1.0.130"
serde_derive = "1.0.145"
# Specific serialization and deserialization for JSON
serde_json = "1.0.70"

# A fast web framework for Rust
actix-web = "4.2.1"
actix-files = "0.6.2"

# Add logging support
log = "0.4.17"
env_logger = "0.9.1"

# runtime for writing asynchronous applications
tokio = {version ="1", features = ["macros", "rt-multi-thread"]}